@@ -9,7 +9,9 @@ unison (2.27.57-4) UNRELEASED; urgency=low
   * Add bash_completion (Closes: #349782, #481070)
   * Use the full path to access icon in .desktop (Closes: #541700)
   * Patch from unison trunk to remove 'Connected ...' message even when
-    -silent is set (Closes: #497729)
+    -silent is set (Closes: #497729, #551199)
+  * Auto generate conflicts with unisonX.Y.Z or unison (X.Y.Z) package
+    (Closes: #570910)
 
  -- Sylvain Le Gall <gildor@debian.org>  Tue, 23 Feb 2010 00:42:07 +0000
 
